# indiekit-site

./: .gitignore  README.md  README.zh-CN.md  SHOW_HN_DRAFT.md  pyproject.toml
content/: membership.md
content/blog/: 01-build-5-saas-in-one-night.md  02-indie-hacker-tech-stack.md  03-ai-coding-tools.md  2026-02-04-ai-cs-saas-intro.md  2026-02-04-build-ai-customer-service.md  2026-02-05-uptime-ping-intro.md  2026-02-06-database-choices.md  2026-02-06-hn-digest-intro.md  2026-02-07-indie-hacker-tech-stack.md  2026-02-07-webhook-relay-intro.md  2026-02-08-fastapi-quick-start.md  2026-02-08-tiny-link-intro.md  2026-02-09-cloudflare-free-hosting.md  2026-02-09-quick-paste-intro.md  2026-02-10-ai-coding-workflow.md  2026-02-11-ai-coding-workflow-en.md  2026-02-11-free-uptime-monitoring-tools.md  2026-02-12-ai-coding-tools.md  2026-02-12-doc2md-intro.md  2026-02-13-mcp-guide-en.md  2026-02-13-systemd-deploy-guide.md  2026-02-14-indiekit-intro-en.md  2026-02-14-mcp-servers-intro.md  2026-02-17-ai-coding-methodology.md  2026-02-17-make-money-with-ai-agent.md  2026-02-17-multimodal-agents-era.md  2026-02-17-openclaw-six-use-cases.md  2026-02-17-pagelm-open-source-notebooklm.md  2026-02-18-gemini-receipt-ocr.md  2026-02-19-feedcraft-rss-middleware.md  2026-02-19-gemini-receipt-ocr.md  2026-02-19-typescript-brand-types.md  2026-02-20-ai-native-cli-design.md  2026-02-25-translating-open-source-with-ai-zh.md  2026-02-25-translating-open-source-with-ai.md  2026-02-26-postgresql-json-agg-kills-n-plus-1.md  2026-02-28-porting-python-pg-tools-to-typescript.md  (+13 more)
src/: __init__.py  main.py
(+1 files in other folders)
