[project]
name = "indiekit-site"
version = "0.1.0"
description = "IndieKit - Resources for indie hackers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "python-frontmatter>=1.1.0",
    "jinja2>=3.1.0",
]
